--- a/.github/workflows/issueautomation.yml
+++ b/.github/workflows/issueautomation.yml
@@ -69,18 +69,18 @@ jobs:
           echo "DONE_OPTION_ID=${DONE_OPTION_ID}" >> $GITHUB_OUTPUT
          
  
-move-issue:
-  runs-on: ubuntu-latest
-  needs: get-issue-parameters
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Move Issue to In-Progress
-      if: contains(github.event.comment.body, 'progress')
-      run: |
-        echo "Moving to In-Progress"
-        gh project item-edit --id ${{needs.get-issue-parameters.outputs.ISSUE_ID}} --field-id ${{needs.get-issue-parameters.outputs.FIELD_ID}} --project-id ${{needs.get-issue-parameters.outputs.PROJECT_ID}} --single-select-option-id ${{needs.get-issue-parameters.outputs.INPROGRESS_OPTION_ID}}
-      env:
-        GH_TOKEN: ${{ github.token }}
-        GH_REPO: ${{ github.repository }}
+  move-issue:
+    runs-on: ubuntu-latest
+    needs: get-issue-parameters
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+ 
+      - name: Move Issue to In-Progress
+        if: contains(github.event.comment.body, 'progress')
+        run: |
+          echo "Moving to In-Progress"
+          gh project item-edit --id ${{needs.get-issue-parameters.outputs.ISSUE_ID}} --field-id ${{needs.get-issue-parameters.outputs.FIELD_ID}} --project-id ${{needs.get-issue-parameters.outputs.PROJECT_ID}} --single-select-option-id ${{needs.get-issue-parameters.outputs.INPROGRESS_OPTION_ID}}
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
+          GH_REPO: ${{ github.repository }}
