--- a/.github/workflows/issueautomation.yml
+++ b/.github/workflows/issueautomation.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           PROJECT_NUMBER=$(gh project list --format json | jq -r '.projects[] | select(.title=="githubproject") | .number')
           echo "PROJECT_NUMBER=${PROJECT_NUMBER}" >> $GITHUB_ENV
+          echo "PROJECT_NUMBER=${PROJECT_NUMBER}"
  
       - name: Get Issue URL
         id: get_issue_url
@@ -36,14 +37,14 @@ jobs:
       - name: Get Issue ID
         id: get_issue_id
         run: |
-          ISSUE_ID=$(gh project item-list ${{env.PROJECT_NUMBER}} --owner '@me' --format json | jq -r '.items[] | select(.content.number==${{ github.event.issue.number }}) | .id')
+          ISSUE_ID=$(gh project item-list --owner "@me" --format json --number "${{ env.PROJECT_NUMBER }}" | jq -r '.items[] | select(.content.number==${{ github.event.issue.number }}) | .id')
           echo "ISSUE_ID=${ISSUE_ID}" >> $GITHUB_ENV
           echo "ISSUE_ID=${ISSUE_ID}" >> $GITHUB_OUTPUT
  
       - name: Get Field ID
         id: get_field_id
         run: |
-          FIELD_ID=$(gh project field-list ${{env.PROJECT_NUMBER}} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .id')
+          FIELD_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .id')
           echo "FIELD_ID=${FIELD_ID}" >> $GITHUB_ENV
           echo "FIELD_ID=${FIELD_ID}" >> $GITHUB_OUTPUT
  
@@ -57,14 +58,14 @@ jobs:
       - name: Get Option ID for In Progress
         id: get_inprogress_option_id
         run: |
-          INPROGRESS_OPTION_ID=$(gh project field-list ${{env.PROJECT_NUMBER}} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .options[] | select(.name=="In progress") | .id')
+          INPROGRESS_OPTION_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .options[] | select(.name=="In progress") | .id')
           echo "INPROGRESS_OPTION_ID=${INPROGRESS_OPTION_ID}" >> $GITHUB_ENV
           echo "INPROGRESS_OPTION_ID=${INPROGRESS_OPTION_ID}" >> $GITHUB_OUTPUT
      
       - name: Get Option ID for Done
         id: get_done_option_id
         run: |
-          DONE_OPTION_ID=$(gh project field-list ${{env.PROJECT_NUMBER}} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .options[] | select(.name=="Done") | .id')
+          DONE_OPTION_ID=$(gh project field-list ${{ env.PROJECT_NUMBER }} --owner "@me" --format json | jq -r '.fields[] | select(.name=="Status") | .options[] | select(.name=="Done") | .id')
           echo "DONE_OPTION_ID=${DONE_OPTION_ID}" >> $GITHUB_ENV
           echo "DONE_OPTION_ID=${DONE_OPTION_ID}" >> $GITHUB_OUTPUT
 
@@ -79,10 +80,10 @@ jobs:
         if: contains(github.event.comment.body, 'progress')
         run: |
           echo "Checking current status of the issue..."
-          CURRENT_STATUS=$(gh project item-list --id ${{needs.get-issue-parameters.outputs.ISSUE_ID}} --project-id ${{needs.get-issue-parameters.outputs.PROJECT_ID}} --format json | jq -r '.items[] | .status')
+          CURRENT_STATUS=$(gh project item-list --owner "@me" --format json --number "${{ needs.get-issue-parameters.outputs.PROJECT_ID }}" | jq -r '.items[] | select(.id=="${{ needs.get-issue-parameters.outputs.ISSUE_ID }}") | .status')
           if [[ "$CURRENT_STATUS" != "In Progress" ]]; then
             echo "Moving to In-Progress"
-            gh project item-edit --id ${{needs.get-issue-parameters.outputs.ISSUE_ID}} --field-id ${{needs.get-issue-parameters.outputs.FIELD_ID}} --project-id ${{needs.get-issue-parameters.outputs.PROJECT_ID}} --single-select-option-id ${{needs.get-issue-parameters.outputs.INPROGRESS_OPTION_ID}}
+            gh project item-edit --id "${{ needs.get-issue-parameters.outputs.ISSUE_ID }}" --field-id "${{ needs.get-issue-parameters.outputs.FIELD_ID }}" --project-id "${{ needs.get-issue-parameters.outputs.PROJECT_ID }}" --single-select-option-id "${{ needs.get-issue-parameters.outputs.INPROGRESS_OPTION_ID }}"
           else
             echo "Issue is already in 'In Progress' state. No changes needed."
         env:
