--- a/.github/workflows/issueautomation.yml
+++ b/.github/workflows/issueautomation.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.TOKEN }}" | gh auth login --with-token
 
+      - name: Set GH_TOKEN Environment Variable
+        run: echo "GH_TOKEN=${{ secrets.TOKEN }}" >> $GITHUB_ENV
+
       - name: Check GitHub CLI Authentication
         run: gh auth status
 
@@ -32,7 +35,7 @@ jobs:
       - name: Get Issue ID
         id: get_issue_id
         run: |
-          ISSUE_ID=$(gh project item-list --project-id "${{ env.PROJECT_ID }}" --format json | jq -r '.items[] | select(.content.number == '${{ github.event.issue.number }}') | .id')
+          ISSUE_ID=$(gh project item-list --owner "@me" --format json | jq -r '.items[] | select(.content.number == '${{ github.event.issue.number }}') | .id')
           echo "ISSUE_ID=${ISSUE_ID}" >> $GITHUB_ENV
           echo "ISSUE_ID=${ISSUE_ID}" >> $GITHUB_OUTPUT
 
@@ -68,7 +71,7 @@ jobs:
         if: contains(github.event.comment.body, 'progress')
         run: |
           echo "Checking current status of the issue..."
-          CURRENT_STATUS=$(gh project item-list --project-id "${{ needs.get-issue-parameters.outputs.PROJECT_ID }}" --format json | jq -r '.items[] | select(.id=="${{ needs.get-issue-parameters.outputs.ISSUE_ID }}") | .status')
+          CURRENT_STATUS=$(gh project item-list --owner "@me" --format json | jq -r '.items[] | select(.id=="${{ needs.get-issue-parameters.outputs.ISSUE_ID }}") | .status')
           if [[ "$CURRENT_STATUS" != "In progress" ]]; then
             echo "Moving to 'In Progress'"
             gh project item-edit --id "${{ needs.get-issue-parameters.outputs.ISSUE_ID }}" \
@@ -77,3 +80,5 @@ jobs:
           else
             echo "Issue is already in 'In Progress' state."
           fi
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
