--- a/.github/workflows/issueautomation.yml
+++ b/.github/workflows/issueautomation.yml
@@ -17,16 +17,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Authenticate GitHub CLI
-        run: echo "${{ secrets.TOKEN }}" | gh auth login --with-token
-
-      - name: Set GH_TOKEN Environment Variable
-        run: echo "GH_TOKEN=${{ secrets.TOKEN }}" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
+        run: gh auth login --with-token <<< "${{ secrets.TOKEN }}"
 
       - name: Check GitHub CLI Authentication
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: gh auth status
 
       - name: Get Project ID
         id: get_project_id
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: |
           PROJECT_ID=$(gh project list --owner "@me" --format json | jq -r '.[] | select(.title=="github-actions-lab") | .id')
           echo "PROJECT_ID=${PROJECT_ID}" >> $GITHUB_ENV
@@ -34,6 +37,8 @@ jobs:
 
       - name: Get Issue ID
         id: get_issue_id
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: |
           ISSUE_ID=$(gh project item-list --owner "@me" --format json | jq -r '.items[] | select(.content.number == '${{ github.event.issue.number }}') | .id')
           echo "ISSUE_ID=${ISSUE_ID}" >> $GITHUB_ENV
@@ -41,6 +46,8 @@ jobs:
 
       - name: Get Field ID
         id: get_field_id
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: |
           FIELD_ID=$(gh project field-list --project-id "${{ env.PROJECT_ID }}" --format json | jq -r '.[] | select(.name=="Status") | .id')
           echo "FIELD_ID=${FIELD_ID}" >> $GITHUB_ENV
@@ -48,6 +55,8 @@ jobs:
 
       - name: Get Option ID for In Progress
         id: get_inprogress_option_id
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: |
           INPROGRESS_OPTION_ID=$(gh project field-list --project-id "${{ env.PROJECT_ID }}" --format json | jq -r '.[] | select(.name=="Status") | .options[] | select(.name=="In progress") | .id')
           echo "INPROGRESS_OPTION_ID=${INPROGRESS_OPTION_ID}" >> $GITHUB_ENV
@@ -55,6 +64,8 @@ jobs:
 
       - name: Get Option ID for Done
         id: get_done_option_id
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: |
           DONE_OPTION_ID=$(gh project field-list --project-id "${{ env.PROJECT_ID }}" --format json | jq -r '.[] | select(.name=="Status") | .options[] | select(.name=="Done") | .id')
           echo "DONE_OPTION_ID=${DONE_OPTION_ID}" >> $GITHUB_ENV
@@ -69,6 +80,8 @@ jobs:
 
       - name: Move Issue to In Progress
         if: contains(github.event.comment.body, 'progress')
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: |
           echo "Checking current status of the issue..."
           CURRENT_STATUS=$(gh project item-list --owner "@me" --format json | jq -r '.items[] | select(.id=="${{ needs.get-issue-parameters.outputs.ISSUE_ID }}") | .status')
@@ -80,5 +93,3 @@ jobs:
           else
             echo "Issue is already in 'In Progress' state."
           fi
-        env:
-          GH_TOKEN: ${{ secrets.TOKEN }}
