--- a/.github/workflows/issueautomation.yml
+++ b/.github/workflows/issueautomation.yml
@@ -2,6 +2,7 @@ name: Issue Management
 on:
   issue_comment:
     types: [created]
+
 jobs:
   get-issue-parameters:
     runs-on: ubuntu-latest
@@ -10,10 +11,14 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Authenticate GitHub CLI
-        run: echo "${{ secrets.TOKEN }}" | gh auth login --with-token
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check GitHub CLI Authentication
         run: gh auth status
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get Project Number
         id: get_project
@@ -52,6 +57,9 @@ jobs:
         if: contains(github.event.comment.body, 'progress')
         run: |
           echo "Moving to In-Progress"
-          gh project item-edit --id "${{ env.ISSUE_ID }}" --field-id "${{ env.FIELD_ID }}" --project-id "${{ env.PROJECT_NUMBER }}" --single-select-option-id "${{ env.INPROGRESS_OPTION_ID }}"
+          gh project item-edit --id "${{ env.ISSUE_ID }}" \
+            --field-id "${{ env.FIELD_ID }}" \
+            --project-id "${{ env.PROJECT_NUMBER }}" \
+            --single-select-option-id "${{ env.INPROGRESS_OPTION_ID }}"
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
