--- a/.github/workflows/issueautomation.yml
+++ b/.github/workflows/issueautomation.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Authenticate GitHub CLI
-        run: echo "${{ secrets.TOKEN }}" | gh auth login --with-token
+        run: echo "${{ secrets.GH_TOKEN }}" | gh auth login --with-token
 
       - name: Check GitHub CLI Authentication
         run: gh auth status
@@ -105,5 +105,5 @@ jobs:
                                --project-id ${{ needs.get-issue-parameters.outputs.PROJECT_ID }} \
                                --single-select-option-id ${{ needs.get-issue-parameters.outputs.INPROGRESS_OPTION_ID }}
         env:
-          GH_TOKEN: ${{ secrets.TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GH_REPO: ${{ github.repository }}
